--- a/.devcontainer/01_basic/08_events/three.html
+++ b/.devcontainer/01_basic/08_events/three.html
@@ -13,10 +13,13 @@
     <button id="start">Start</button>
 </body>
 <script>
-    setInterval(function(){
-        console.log("lalit");
-    },1)
+    const sayDate=function(str){
+        console.log(str,Date.now());
+    }
 
+    const intervalid = setInterval(sayDate,1000,"hi")
+
+    clearInterval(intervalid)
 </script>
 
 </html>
